# pfpl

./: .editorconfig  README.md
E/: E.ml  README.md  abt.ml  abt.mli  dune  dynamics.ml  dynamics.mli  example.ml  statics.ml  statics.mli
E/data/: example2.ml  example3.ml  example4.ml
E/main/: dune  main.ml
E/parsing/: lexer.mll  parse.ml  parser.mly  past.mli  pprint.ml
E/statics/: statics.ml  statics.mli
E/typing/: types.mli
EF/: EF.ml
chapter1/ulc/: build.sh  clean.sh  dune
chapter1/ulc/data/: church_bool.ml  multi_args.ml  test1.ml
chapter1/ulc/main/: dune  main.ml
chapter1/ulc/parsing/: Makefile  ast.mli  lexer.ml  parse.ml  parser.mly
chapter1/ulc/reduction/: dune  reduction.ml
