(copy_files# parsing/*.ml{,i})
(copy_files# statics/*.ml{,i})

(library
  (name abt)
  (modules_without_implementation abt)
  (modules
    abt
    )
  )

(library
  (name parsing)
  (modules_without_implementation past)
  (modules
    past
    parser
    lexer
    parse
    )
  (libraries abt)
  )

(library
  (name statics)
  (modules
    statics)
  (libraries abt)
  )
