(copy_files# parsing/*.ml{,i})

(library
  (name abt)
  (modules_without_implementation abt)
  (modules
  abt
  )
)

(library
  (name parsing)
  (modules_without_implementation past)
  (modules
  past
  parser
  lexer
  parse
  pprint
)
(libraries abt)
)

(library
(name e)
(modules
statics)
(libraries abt)
)
