(copy_files# parsing/*.ml{,i})

(library
  (name abt)
  (modules
    abt
    )
  )

(library
  (name parsing)
  (modules_without_implementation past)
  (modules
  past
  parser
  lexer
  parse
  pprint
)
(libraries abt)
)

(library
  (name statics)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (modules
    statics)
  (libraries abt)
  )

(library
  (name dynamics)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (modules
    dynamics)
  (libraries statics)
  )
